--- a/index.html
+++ b/index.html
@@ -30,16 +30,52 @@
                 <div id="menu">
                     <ul id="navegacao">
                         <li><a href=""></a>Home</li>
-                        <li><a href=""></a>Home</li>
-                        <li><a href=""></a>Home</li>
-                        <li><a href=""></a>Home</li>
-                        <li><a href=""></a>Home</li>
-
+                        <li><a href=""></a>História</li>
+                        <li><a href=""></a>Imprensa</li>
+                        <li><a href=""></a>Gastronomia</li>
+                        <li><a href="">Contato</a></li>
                     </ul>
+                    <img class="depoimento" src="/assets/Img/depoimento.png" alt="">
 
                 </div>
-
             </div>
+          </div>
+
+          <div id="area-principal">
+            <div class="conteudo">
+                <h2>Lorem ipsum dolor sit amet, consectetur</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt sunt sed repudiandae laudantium dignissimos eligendi totam maiores, ut accusamus provident nihil hic qui asperiores aspernatur reiciendis dolores ea mollitia. Earum?</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id congue velit, in cursus augue. Morbi vel orci mattis, condimentum arcu in, sodales ligula.</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id congue velit, in cursus augue. Morbi vel orci mattis, condimentum arcu in, sodales ligula.</p>
+            </div>
+          </div>
+
+          <div id="area-lateral">
+            <div class="conteudo">
+                <ul id="beneficios">
+                    <li>
+                        <a href="">
+                            <img src="/assets/Img/restaurante.jpg" width="150" alt="Apartamento">
+                            <h3>Apartamento</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla erat leo, bibendum id imperdiet at, elementum ornare elit.</p>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">
+                            <img src="assets/Img/piscina.jpg" width="150" alt="Piscina">
+                            <h3>Apartamento</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla erat leo, bibendum id imperdiet at, elementum ornare elit.</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+          </div>
+
+          <div id="rodape">
+            <span>&copy; Copyright 2000-2020 Chalé Hotel</span>
           </div>
         </div>
     </div>
